--- a/main.org
+++ b/main.org
@@ -1693,6 +1693,12 @@ If in compilation buffer there are many lines it start to be a very slow
 ;; 
 ;; (define-key ggtags-mode-map (kbd "M-,") 'pop-tag-mark)
 #+END_SRC
+* Telega
+#+BEGIN_SRC emacs-lisp :results output silent
+(use-package telega
+  :ensure t)
+#+END_SRC
+
 * Dy
 #+BEGIN_SRC emacs-lisp :results output silent
 
