--- a/main.org
+++ b/main.org
@@ -291,12 +291,7 @@ find them with C-x C-f (find-file) if I really need to.
   (define-key evil-normal-state-map (kbd "<SPC> I") 'consult-imenu-multi)
   (define-key evil-normal-state-map (kbd "<SPC> s") 'consult-ripgrep)
 
-  (define-key evil-normal-state-map (kbd "<SPC> 1") 'winum-select-window-1)
-  (define-key evil-normal-state-map (kbd "<SPC> 2") 'winum-select-window-2)
-  (define-key evil-normal-state-map (kbd "<SPC> 3") 'winum-select-window-3)
-  (define-key evil-normal-state-map (kbd "<SPC> 4") 'winum-select-window-4)
-  (define-key evil-normal-state-map (kbd "<SPC> 5") 'winum-select-window-5)
-  (define-key evil-normal-state-map (kbd "<SPC> 6") 'winum-select-window-6)
+  (define-key evil-normal-state-map (kbd "<SPC> w") 'ace-window)
 
   (define-key evil-normal-state-map (kbd "<SPC> g") 'magit-status)
   (define-key evil-normal-state-map (kbd "<SPC> a a") 'org-agenda)
@@ -430,22 +425,6 @@ find them with C-x C-f (find-file) if I really need to.
 For backward word and forwardword
 #+BEGIN_SRC emacs-lisp :results output silent
   (superword-mode t)
-#+END_SRC
-
-* Winum
-#+BEGIN_SRC emacs-lisp :results output silent
-(use-package winum
-  :ensure t
-  :after compilation-mode
-  :config 
-  (winum-mode)
-  (define-key compilation-mode-map (kbd "<SPC> 1") 'winum-select-window-1)
-  (define-key compilation-mode-map (kbd "<SPC> 2") 'winum-select-window-2)
-  (define-key compilation-mode-map (kbd "<SPC> 3") 'winum-select-window-3)
-  (define-key compilation-mode-map (kbd "<SPC> 4") 'winum-select-window-4)
-  (define-key compilation-mode-map (kbd "<SPC> 5") 'winum-select-window-5)
-  (define-key compilation-mode-map (kbd "<SPC> 6") 'winum-select-window-6)
-  )
 #+END_SRC
 
 * Magit
@@ -1723,6 +1702,12 @@ If in compilation buffer there are many lines it start to be a very slow
 * Telega
 #+BEGIN_SRC emacs-lisp :results output silent
 (use-package telega
+  :ensure t)
+#+END_SRC
+
+* Ace window
+#+BEGIN_SRC emacs-lisp :results output silent
+(use-package ace-window
   :ensure t)
 #+END_SRC
 
